project/svc.yaml
apiVersion: v1
kind: Service 
metadata:
  name: django-svc
  labels:
    app: django-svc    # This will show Services with label app=nginx-svc
                      # kubectl get svc -l app=nginx-svc
spec:
  type: LoadBalancer
  ports:              
    - port: 8000        # port on which the Service listens for incoming traffic.
      protocol: TCP
      targetPort: 8000  # where traffic should re-direct
  selector: 
    app: django        # service gonna looks pods have this label
